ui/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bag-ui-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bag-ui-v1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: bag-ui-v1
    spec:
      containers:
      - name: bag-ui-v1
        image: gcr.io/PROJECT_ID/IMAGE:TAG
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
