ui/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bag-ui-v1
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: bag-ui-v1
