ui/k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bag-ui
  annotations:
    kubernetes.io/ingress.global-static-ip-name: crypto-bag
spec:
  rules:
  - host: "cryptobag.podnov.com"
    http:
      paths:
      - pathType: Prefix
        path: "/*"
        backend:
          serviceName: bag-ui-v1
          servicePort: 80
